# codellm-devkit

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.insiders.yml  mkdocs.yaml  mkdocs.yml  mkdocs.yml.kolena  pyproject.toml  setup.cfg  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: mkdocs-deploy.yml  python-publish.yml  release.yml  release_config.json
_site/: sitemap.xml
_site/contribute/: index.html
_site/examples/java/notebook/: code_summarization.ipynb
api_reference/: index.html
cldk/: __init__.py  core.py
cldk/analysis/: __init__.py  analysis_level.py  call_graph.py  program_dependence_graph.py  symbol_table.py  system_dependence_graph.py
cldk/analysis/c/: __init__.py  c_analysis.py
cldk/analysis/c/clang/: __init__.py  clang_analyzer.py
cldk/analysis/c/treesitter/: __init__.py  c_sitter.py
cldk/analysis/commons/treesitter/: __init__.py  treesitter_java.py  treesitter_python.py
cldk/analysis/commons/treesitter/utils/: __init__.py  treesitter_utils.py
cldk/analysis/go/treesitter/: __init__.py  go_sitter.py
cldk/analysis/java/: __init__.py  java.py  java_analysis.py
cldk/analysis/java/codeanalyzer/: __init__.py  codeanalyzer.py
cldk/analysis/java/codeanalyzer/jar/: .gitignore  __init__.py
cldk/analysis/java/codeql/: __init__.py  backend.py  codeql.py
cldk/analysis/java/treesitter/: __init__.py  java_sitter.py  javasitter.py
cldk/analysis/javascript/: __init__.py
cldk/analysis/javascript/treesitter/: __init__.py  javascript_sitter.py
cldk/analysis/python/: __init__.py  python.py  python_analysis.py
cldk/analysis/python/treesitter/: __init__.py  python_sitter.py
cldk/models/: __init__.py
cldk/models/c/: __init__.py  models.py
cldk/models/go/: __init__.py  models.py
cldk/models/java/: __init__.py  constants_namespace.py  enums.py  models.py
cldk/models/javascript/: __init__.py  models.py
cldk/models/python/: __init__.py  models.py
cldk/models/rust/: models.py
cldk/models/treesitter/: __init__.py  models.py
cldk/utils/: __init__.py  analysis_engine.py  logging.py
cldk/utils/exceptions/: __init__.py  exceptions.py
cldk/utils/misc/analysis/go/treesitter/: __init__.py
cldk/utils/misc/analysis/javascript/treesitter/: __init__.py
cldk/utils/misc/models/c/: models.py
cldk/utils/misc/models/javascript/: models.py
cldk/utils/sanitization/: __init__.py
cldk/utils/sanitization/java/: TreesitterSanitizer.py  TreesitterUtils.py  __init__.py  treesitter_sanitizer.py  treesitter_utils.py
cldk/utils/treesitter/: __init__.py  tree_sitter_utils.py
contribute/: index.html
docs/: CNAME  LICENSE.txt  api_reference.md  contribute.md  index.md  installing.md  publications.md  quickstart.md  walkthrough.md
docs.bak/automations/: set-up-natural-language-search.md
docs.bak/dataset/advanced-usage/: custom-queries.md  upload-embeddings.md
docs.bak/dataset/core-concepts/: index.md
docs.bak/metrics/: confusion-matrix.md  density-score.md  fnr.md  potential-difficulty-score.md  representation-score.md  uniqueness-score.md
docs.bak/reference/experimental/: index.md
docs/assets/: cldk-light.ai  logo-light.ai
docs/assets/css/: theme.css
docs/blog/: blog.md
docs/core-concepts/: index.md
docs/css/: index.css
docs/examples/java/: code_summarization.ipynb  code_summarization.py  generate_unit_tests.ipynb  validating_code_translation.ipynb
docs/examples/java/notebook/: code_summarization.ipynb  generate_unit_tests.ipynb  validating_code_translation.ipynb
docs/examples/java/notebook/.ipynb_checkpoints/: code_summarization-checkpoint.ipynb
docs/layouts/: custom.yml
docs/reference/: index.md
docs/stylesheets/: extra.css
examples/java/notebook/: validating_code_translation.ipynb
publications/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api_reference/: index.html
site/architecture/: index.html
site/assets/: cldk-dark.ai
site/assets/css/: theme.css
site/core-concepts/: index.html
site/installing/: index.html
site/publications/: index.html
site/quick-start/: index.html
site/quickstart/: index.html
site/walkthrough/: index.html
stylesheets/: extra.css
tests/: conftest.py  example.py  test_core.py
tests/analysis/c/: test_c_analysis.py
tests/analysis/java/: test_get_callee.py  test_java.py  test_java_analysis.py  test_java_sitter.py  test_jcodeanalyzer.py
tests/analysis/python/: test_python.py  test_python_analysis.py  test_python_sitter.py  test_python_tree_sitter.py  test_treesitter_python.py
tests/models/java/: test_java_models.py
tests/resources/c/application/binutils-2.7/binutils-2.7/: Makefile.in  configure  configure.in  mpw-configure
tests/resources/c/application/binutils-2.7/binutils-2.7/bfd/: ChangeLog  Makefile.in  aoutx.h  bfd-in2.h  coff-h8300.c  coff-ppc.c  coffcode.h  cofflink.c  config.bfd  config.in  configure  configure.host  configure.in  cpu-h8300.c  elf.c  elf32-mips.c  elf64-alpha.c  libbfd-in.h  libbfd.h  reloc.c  reloc16.c  riscix.c  som.c  som.h  targets.c  xcofflink.c
tests/resources/c/application/binutils-2.7/binutils-2.7/binutils/: ChangeLog  Makefile.in  arlex.c  arparse.c  binutils.info  bucomm.h  config.texi  configure  configure.in  deflex.c  dlltool.c  nm.c  objdump.c  (+2 more)
tests/resources/java/analysis_json/: analysis.json
tests/resources/java/analysis_json/fat/: analysis.json
tests/resources/java/analysis_json/slim/: analysis.json
tests/resources/java/application/plantsbywebsphere/: README.md  build.gradle
tests/resources/java/application/sample.daytrader8-1.2/: .gitignore  Dockerfile  README.md  README_LOAD_TEST.md  pom.xml
tests/resources/java/application/sample.daytrader8-1.2/jmeter_files/: README.txt  daytrader8.jmx  daytrader8_mojarra.jmx  daytrader8_mojarra_no_ws.jmx  daytrader8_no_ws.jmx
tests/tree_sitter/c/: test_c_tree_sitter.py
tests/tree_sitter/go/: test_go_tree_sitter.py
tests/tree_sitter/javascript/: test_javascript_tree_sitter.py
tests/tree_sitter/python/: test_python_tree_sitter.py
walkthrough/: index.html
(+279 files in other folders)
