[tool.poetry]
name = "cldk"
version = "0.4.0"
description = "The official Python SDK for Codellm-Devkit."
authors = ["Rahul Krishna <i.m.ralk@gmail.com>", "Rangeet Pan <rangeet.pan@ibm.com>", "Saurabh Sinhas <sinhas@us.ibm.com>",
            "Raju Pavuluri <pavuluri@us.ibm.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://codellm-devkit.info"
repository = "https://github.com/codellm-devkit/python-sdk"
keywords = ["ibm", "llm", "large language models", "code analyzer", "syntax tree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
include = [
    "LICENSE",
    "cldk/analysis/java/codeanalyzer/jar/*.jar"
]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = "^2.6.1"
pandas = "^2.2.0"
networkx = "^3.3"
pyarrow = "19.0.0"
tree-sitter = "0.24.0"
rich = "13.9.4"
wget = "3.2"
requests = "^2.31.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.23.4"
tree-sitter-go = "0.23.4"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
# Test dependencies
mkdocs-material = {extras = ["imaging"], version = "^9.6.2"}

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pytest = "8.3.3"
pytest-pspec = "^0.0.4"
pytest-cov = "^5.0.0"
pylint = "^3.2.2"
flake8 = "^7.0.0"
black = "^24.4.2"
coverage = "^7.5.3"
jupyter = "^1.0.0"



[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.1"
mkdocs-autorefs = "^1.3.0"
mkdocs-get-deps = "^0.2.0"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = "^0.28.0"
mkdocstrings-python = "^1.13.0"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

########################################
# Tool configurations
########################################
[tool.flake8]
max-line-length = 180
count = true

[tool.black]
line-length = 180

[tool.pylint.'MESSAGES CONTROL']
disable = "no-member,protected-access,global-statement"

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--pspec --cov=cldk --cov-fail-under=50"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cldk"]
omit = [
    "venv/*",
    ".venv/*"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: no branch",
    "pass",
    "subprocess.CalledProcessError",
    "sys.exit",
    "if __name__ == .__main__.:"
]
ignore_errors = true

[tool.coverage.xml]
output="./coverage.xml"

[tool.coverage.html]
title = "Test Coverage Report"
directory = "coverage_html_report"

[tool.cldk.testing]
sample-application = "tests/resources/java/application/"
sample-application-analysis-json = "tests/resources/java/analysis_json/"
codeanalyzer-jar-path = "tests/resources/java/codeanalyzer_jars/"
